--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -20,12 +22,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "jest:integration": "jest -c integration//jest.config.js",
+    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -39,5 +47,27 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-essentials": "^8.4.3",
+    "@storybook/addon-interactions": "^8.4.3",
+    "@storybook/addon-onboarding": "^8.4.3",
+    "@storybook/blocks": "^8.4.3",
+    "@storybook/preset-create-react-app": "^8.4.3",
+    "@storybook/react": "^8.4.3",
+    "@storybook/react-webpack5": "^8.4.3",
+    "@storybook/test": "^8.4.3",
+    "@types/react-redux": "^7.1.34",
+    "eslint-plugin-storybook": "^0.11.0",
+    "jest": "^29.7.0",
+    "jest-environment-puppeteer": "^5.0.4",
+    "jest-image-snapshot": "^6.4.0",
+    "jest-puppeteer": "^10.1.4",
+    "prop-types": "^15.8.1",
+    "puppeteer": "^19.11.1",
+    "start-server-and-test": "^2.0.8",
+    "storybook": "^8.4.3",
+    "webpack": "^5.96.1"
   }
 }
