--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +14,9 @@
     "@types/node": "^16.18.105",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.9",
+    "axios-proxy": "^0.0.1-security",
+    "express-http-proxy": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -23,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6008",
     "build-storybook": "storybook build",
     "jest:integration": "jest -c integration//jest.config.js",
     "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
@@ -58,8 +65,10 @@
     "@storybook/react": "^8.4.3",
     "@storybook/react-webpack5": "^8.4.3",
     "@storybook/test": "^8.4.3",
+    "@storybook/types": "^8.4.7",
     "@types/react-redux": "^7.1.34",
     "eslint-plugin-storybook": "^0.11.0",
+    "http-proxy-middleware": "^3.0.3",
     "jest": "^29.7.0",
     "jest-environment-puppeteer": "^5.0.4",
     "jest-image-snapshot": "^6.4.0",
