--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,10 +7,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.105",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
@@ -19,16 +19,17 @@
     "express-http-proxy": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-scripts": "5.0.1",
+    "react-redux": "^9.2.0",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
-    "typescript": "^4.9.5",
+    "redux-thunk": "^3.1.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6008",
     "build-storybook": "storybook build",
@@ -56,27 +57,33 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@chromatic-com/storybook": "^3.2.2",
-    "@storybook/addon-essentials": "^8.4.3",
     "@storybook/addon-interactions": "^8.4.3",
     "@storybook/addon-onboarding": "^8.4.3",
     "@storybook/blocks": "^8.4.3",
-    "@storybook/preset-create-react-app": "^8.4.3",
     "@storybook/react": "^8.4.3",
     "@storybook/react-webpack5": "^8.4.3",
     "@storybook/test": "^8.4.3",
     "@storybook/types": "^8.4.7",
+    "@types/jest": "^29.5.14",
     "@types/react-redux": "^7.1.34",
+    "babel-jest": "^29.7.0",
+    "crypto-browserify": "^3.12.1",
     "eslint-plugin-storybook": "^0.11.0",
     "http-proxy-middleware": "^3.0.3",
     "jest": "^29.7.0",
     "jest-environment-puppeteer": "^5.0.4",
-    "jest-image-snapshot": "^6.4.0",
     "jest-puppeteer": "^10.1.4",
     "prop-types": "^15.8.1",
     "puppeteer": "^19.11.1",
     "start-server-and-test": "^2.0.8",
     "storybook": "^8.4.3",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
     "webpack": "^5.96.1"
   }
 }
