--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "@mui/styled-engine-sc": "^6.1.0",
     "@types/uuid": "^10.0.0",
     "styled-components": "^6.1.13"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
+    "@storybook/addon-actions": "^8.5.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
