--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://semilunaris.github.io/todo",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -34,7 +35,8 @@
     "storybook": "storybook dev -p 6008",
     "build-storybook": "storybook build",
     "jest:integration": "jest -c integration//jest.config.js",
-    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
+    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -73,6 +75,7 @@
     "babel-jest": "^29.7.0",
     "crypto-browserify": "^3.12.1",
     "eslint-plugin-storybook": "^0.11.0",
+    "gh-pages": "^6.3.0",
     "http-proxy-middleware": "^3.0.3",
     "jest": "^29.7.0",
     "jest-environment-puppeteer": "^5.0.4",
