--- a/my-app/package.json
+++ b/my-app/package.json
@@ -72,6 +72,7 @@
     "@storybook/types": "^8.4.7",
     "@types/jest": "^29.5.14",
     "@types/react-redux": "^7.1.34",
+    "@types/uuid": "^10.0.0",
     "babel-jest": "^29.7.0",
     "crypto-browserify": "^3.12.1",
     "eslint-plugin-storybook": "^0.11.0",
